welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:5: error: ')' expected but ';' found.
    if (a>=40 & a<= 50 ; b>=40 & b<=50) {
                       ^in3050:5: error: ';' expected but ')' found.
    if (a>=40 & a<= 50 ; b>=40 & b<=50) {
                                      ^in3050:8: error: ';' expected but 'else' found.
  } else {
    ^